--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,23 @@
 body
 {
+    color: blueviolet;
     text-align: center;
     font-family: Arial;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid white;
+    margin: 0%;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
