Finalizada la cabecera con diseño azul

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,15 @@ body
     padding: 0;
 }
 
+#cabecera
+{
+    background-color: blue;
+    color: white;
+    font-weight: bold;
+    margin: 0%;
+    padding: 0.5em;
+}
+
 #container
 {
     width: 70%;
